app/assets/stylesheets/main.scss
.parallax-container {
  height: 500px !important;
}

.small-banner {
	height: 150px !important;
}

.medium-banner {
	height: 250px !important;
}

.bg-white {
	background-color: #ffffff;
}

.brd-rt-cd {
	border-right: 1px solid #cdcdcd;
}

